# OzonDevChampionship

./: CMakeLists.txt  README.md
Easy1/: main.cpp
Easy2/: main.cpp
Easy3/: main.cpp
Medium1/: main.cpp
Medium2/: main.cpp
Super/: main.cpp
