cmake_minimum_required(VERSION 3.17)
project(Ozon)

set(CMAKE_CXX_STANDARD 14)

add_executable(Easy1 Easy1/main.cpp)
add_executable(Easy2 Easy2/main.cpp)
add_executable(Easy3 Easy3/main.cpp)

add_executable(Medium1 Medium1/main.cpp)
add_executable(Medium2 Medium2/main.cpp)

add_executable(Super Super/main.cpp)